Issue #195  Bug          - Update EFA hostname in MySQL
Issue #197  Enhancement  - Update EFA-Backup for Unbound
Issue #199  Bug          - quarantine_report.php issues
Issue #200  Bug          - unrar binary not extracting rar files in MailScanner
Issue #203  Bug          - Fix Notify Senders sed replace issue in 3.0.0.8
Issue #204  Bug          - UTF8 Characters Not Rendering in MailWatch

############################################################
EFA Version 3.0.0.8 Changes
############################################################

Issue #40  Enhancement  - Extend MailWatch to hide high spam from regular users
Issue #45  Enhancement  - Add ScamNailer ClamAV ruleset (superceded by issue #172)
Issue #49  Enhancement  - Add max spam check size to EFA-Configure
Issue #72  Enhancement  - EFA MSRE Support
Issue #132 Enhancement  - Increase sa-learn and spamassassin max message size limits
Issue #150 Bug          - Replace dnsmasq with unbound (URIBL_BLOCKED using dnsmasq)
Issue #157 Bug          - Razor failing after registration of service
Issue #156 Bug          - GeoIP Bug Fix
Issue #158 Enhancement  - Sort transport domain list in EFA-Configure
Issue #161 Enhancement  - Increase MailScanner thread limit in EFA-Configure
Issue #164 Enhancement  - Add MailWatch Password Reset to EFA-Configure
Issue #166 Bug          - MailWatch cron job not executing contents
Issue #167 Enhancement  - Change perms on /etc/postfix/sasl_passwd to 600
Issue #168 Enhancement  - Start regular updates on RegistrarBoundaries.pm
Issue #169 Enhancement  - Clean up clamav-unoffical-sigs script (superceded by issue #170)
Issue #170 Enhancement  - Add support to MalwarePatrol to EFA-Configure
Issue #171 Bug          - Update clamav -- fix any clamav discrepancies
Issue #172 Enhancement  - Review sanesecurity signatures for inclusion in EFA
Issue #173 Enhancement  - Securiteinfo.com support removed from unofficial-sigs
Issue #175 Enhancement  - Set keyboard layout at beginning of EFA-Init