@@ -659,7 +659,7 @@ func_mailwatch () {
     echo "/usr/local/bin/mailwatch/tools/Cron_jobs/quarantine_report.php >> /dev/null 2>&1" >> /etc/cron.daily/mailwatch
     chmod +x /etc/cron.daily/mailwatch
     # Issue #30 filter non-spam from quarantine reports (regression fix)
-    sed -i "/^ ((to_address=%s) OR (to_domain=%s))$/ a\AND\n a.isspam>0" /usr/local/bin/mailwatch/tools/Cron_jobs/quarantine_report.php
+    # sed -i "/^ ((to_address=%s) OR (to_domain=%s))$/ a\AND\n a.isspam>0" /usr/local/bin/mailwatch/tools/Cron_jobs/quarantine_report.php
 
     # Move MailWatch into web root and configure
     mv mailscanner /var/www/html
@@ -722,12 +722,15 @@ func_mailwatch () {
     mv mailscannerlogo.gif mailscannerlogo.gif.orig
     # png image looks much better -- linking to png instead
     ln -s EFAlogo-79px.png mailwatch-logo.gif
-    ln -s EFAlogo-79px.png mailwatch-logo.png
+    #ln -s EFAlogo-79px.png mailwatch-logo.png
     ln -s EFAlogo-47px.gif mailscannerlogo.gif
+    ln -s EFAlogo-79px.png MW_LOGO
+    # Issue 211 MS_LOGO Missing
+    ln -s EFAlogo-47px.gif MS_LOGO
 
     # Issue #107 MailWatch login page shows Mailwatch logo and theme after update testing
-    mv mailwatch-logo-trans-307x84.png mailwatch-logo-trans-307x84.png.orig > /dev/null 2>&1
-    ln -s EFAlogo-79px.png mailwatch-logo-trans-307x84.png
+    # mv mailwatch-logo-trans-307x84.png mailwatch-logo-trans-307x84.png.orig > /dev/null 2>&1
+    # ln -s EFAlogo-79px.png mailwatch-logo-trans-307x84.png
     sed -i 's/#f7ce4a/#719b94/g' /var/www/html/mailscanner/login.php
 
     # Change the yellow to match website colors..
