@@ -72,6 +72,7 @@ mysql
 screen
 php
 php-gd
+php-mbstring
 php-mysql
 httpd
 dnsmasq
