@@ -230,6 +230,8 @@ function update-mailwatch() {
       ln -s EFAlogo-79px.png mailwatch-logo.png
       ln -s EFAlogo-47px.gif mailscannerlogo.gif
       ln -s EFAlogo-79px.png MW_LOGO
+      # Issue 211 MS_LOGO Missing
+      ln -s EFAlogo-47px.gif MS_LOGO
 
       # Alter color scheme
       sed -i 's/#F7CE4A/#719b94/g' /var/www/html/mailscanner/style.css
