@@ -15,6 +15,7 @@ Issue #199  Bug          - quarantine_report.php issues
 Issue #200  Bug          - unrar binary not extracting rar files in MailScanner
 Issue #203  Bug          - Fix Notify Senders sed replace issue in 3.0.0.8
 Issue #204  Bug          - UTF8 Characters Not Rendering in MailWatch
+Issue #211  Bug          - MS_LOGO missing
 
 ############################################################
 EFA Version 3.0.0.8 Changes
